# IS3-Demo-pruebas

./: .coverage  README.md  behave.ini  main.py  pyproject.toml
docs/: reporte_behave.html  reporte_calculos.html  reporte_luciano.html
features/: liquidacion_luciano.feature  suma.feature
features/steps/: liquidacion_luciano_steps.py  suma_steps.py
scripts/: calculos.py  liquidacion.py
test/: conftest.py  test_calculos.py  test_i_liquidacion.py  test_i_liquidacion_luciano.py  test_u_liquidacion.py  test_u_liquidacion_luciano.py
