[project]
name = "is3-demo-pruebas"
version = "0.1.0"
description = "Proyecto de demo para pruebas de software en IS3/ACI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "behave>=1.3.3",
    "behave-html-pretty-formatter>=1.16.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
]
